Fix hidden paddle scrollbar in webkit

--- a/breakdom.css
+++ b/breakdom.css
@@ -3,6 +3,7 @@ html {
   background: #ddd;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
+  margin: 0;
 }
 
 #container {
@@ -23,7 +24,7 @@ html {
 #paddle {
   position: absolute;
   width: 100%;
-  height: 20px;
+  height: 18px;
   bottom: 0;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -34,6 +35,16 @@ html {
   overflow-x: scroll;
   overflow-y: hidden;
   bottom: 0;
+  height: 18px;
+}
+
+#paddle::-webkit-scrollbar {
+  -webkit-appearance: none;
+}
+
+#paddle::-webkit-scrollbar-thumb {
+  border-radius: 9px;
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 #player {
